--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,11 @@
               <img src="images/2.png" alt="Пример работы Android-приложения 2">
             </div>
           </li>
+	  <li>
+            <strong>Создание авторизации на сайте:</strong>
+            <a https://github.com/Sardor-09/authSite" target="_blank">Посмотреть на GitHub</a>
+            </div>
+          </li>
         </ul>
       </section>
     </main>
