--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
           </li>
 	  <li>
             <strong>Создание авторизации на сайте:</strong>
-            <a https://github.com/Sardor-09/authSite" target="_blank">Посмотреть на GitHub</a>
+            <a href="https://github.com/Sardor-09/authSite" target="_blank">Посмотреть на GitHub</a>
             </div>
           </li>
         </ul>
