--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,14 @@
 	  <li>
             <strong>Создание авторизации на сайте:</strong>
             <a href="https://github.com/Sardor-09/authSite" target="_blank">Посмотреть на GitHub</a>
+			<div class="project-images">
+              <img src="images/8.png" alt="Пример работы Android-приложения 1">
+              <img src="images/9.png" alt="Пример работы Android-приложения 2">
             </div>
-          </li>
+			<strong>Рабочую авторизацию вы можете посмотреть:</strong>
+            <a href="https://child-library.web.app/register.html" target="_blank">Нажми на меня</a>
+			</li>
+            </div>
         </ul>
       </section>
     </main>
