--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,15 @@
           </li>
 	  <li>
             <strong>Создание авторизации на сайте:</strong>
-            <a href="https://github.com/Sardor-09/authSite" target="_blank">Посмотреть на GitHub</a>
+
+
 			<div class="project-images">
               <img src="images/8.png" alt="Пример работы Android-приложения 1">
               <img src="images/9.png" alt="Пример работы Android-приложения 2">
             </div>
-			<strong>Рабочую авторизацию вы можете посмотреть:</strong>
-            <a href="https://child-library.web.app/register.html" target="_blank">Нажми на меня</a>
-			</li>
+            <p style="margin-top: 30px;">
+  Подробнее об авторизации вы можете <a href="auth-description.html" class="auth-link">почитать здесь</a>.
+</p>
             </div>
         </ul>
       </section>
